tests/fail/import_namespace.stderr
error[E0406]: Module 'io' not found or not imported
 --> tests/fail/import_namespace.tk:18:5
   |
 18 |     io::println("This should fail compile") // EXPECT: error[E0406]: Module 'io' not found or not imported
   |     ^
